students/static/students/sidebar/sidebar.css
#sidebar-title {
    margin-bottom: 18px;
}

body, html, .row-offcanvas {
  height:100%;
}

body {
  padding-top: 50px;
}

#sidebar {
  width: inherit;
  min-width: 250px;
  max-width: 250px;
  background-color: dimgray;
  float: left;
  height:100%;
  position:relative;
  overflow-y:auto;
  overflow-x:hidden;
  color: white;
}

.sidebar-link {
    color: white;
}

.sidebar-link:hover {
    color: black;
    border-radius: 0;
}

.sidebar-nav-item.active > .sidebar-link {
    background-color: lightgray;
    color: black;
    border-radius: 0;
}

.sidebar-nav-item.active > .sidebar-link:hover {
    background-color: lightgray;
    color: black;
    border-radius: 0;
}
        
#main {
    height: 100%;
    overflow: auto;
    padding-left: 10px;
}

.sidebar-search {
    border: 1px solid;
    border-color: dimgray;
    border-radius: 0;
    margin-top: 20px;
    background-color: #f1f1f1;
}

.sidebar-search:hover {
    border: 1px solid;
    border-color: #fbbd19;
    background-color: white;
}

/* when the sidebar is in use */
.sidebar-search:focus {
    border: 1px solid;
    border-color: #fbbd19;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(251, 189, 25, 0.6);
    background-color: white;
}

/*
 * off Canvas sidebar
 * --------------------------------------------------
 */
@media screen and (max-width: 768px) {
  .row-offcanvas {
    position: relative;
    -webkit-transition: all 0.25s ease-out;
    -moz-transition: all 0.25s ease-out;
    transition: all 0.25s ease-out;
    width:calc(100% + 250px);
  }
    
  .row-offcanvas-left
  {
    left: -250px;
  }

  .row-offcanvas-left.active {
    left: 0;
  }

  .sidebar-offcanvas {
    position: absolute;
    top: 0;
  }
}

